tests/bad/variant3.ml
type ('a, 'b) t = Nil | Cons of 'a * 'a t
